# clim-recal

./: .dockerignore  .gitignore  .gitmodules  .nojekyll  .pre-commit-config.yaml  Dockerfile  README.html  README.md  Region.Refs.csv  Resampling.HADs.inR.R  _quarto.yml  check_calendar_log.txt  compose.yml  conda-lock.yml  environment.yml  requirements.txt  robots.txt  search.json  setup-instructions.html  setup-instructions.md  sitemap.xml
.github/workflows/: ci.yaml
R/: README.html  README.md  Resampling.HADs.R  Resampling.HADs.inR.R  WIP Comparing HADs grids.Rmd  WIP-Comparing-HADs-grids.html  WIP-Comparing-HADs-grids.md
R/LCAT/: Assessing.BC.data.LCAT.RMD  Assessing.BC.data.RMD  Data_Processing_todf.R  LCATv_apply_qmapQuant_to_crpd_df_fn.R  Processing.data.for.LCAT.R  Region.Refs.csv
R/Resampling/: Resampling.HADs.inR.R
R/bias-correction-methods/: DataProcessingMBC.Rmd  ThreeCitiesQmap.RMD  WIP_EQM.RMD  WIP_LinearScaling.RMD  WIP_MBC.Rmd  apply_bias_correction_to_crpd_df_fn.R  apply_qmapQuant_to_crpd_df_fn.R
R/misc/: ConvertingAllCPMdataTOdf.R  Cropping_Rasters_to_three_cities.R  Data_Processing_todf.R  HAD.CRS.for.sourcing.R  Identifying_Runs.RMD  Identifying_Runs.html  Identifying_Runs.md  InfillDataRunIdentyfing.R  calc.mean.sd.daily.R  calc.mean.sd.daily.infill.R  clim-recal-specific-functions.R  cropping-CPM-to-Scotland.R  read_crop.fn.R  read_crop_df_write.fn.R
R/pre-processing/: converting_city_crops_to_df.R
bash/: README.md  andy-cli.bash  combine-iterative-runs.sh  generate_trailing_checksums.sh  remove-extra-cropfiles.py  reproject_all.sh  reproject_one.sh  run-pipeline-iteratively.sh  ubuntu_install.sh
compose/: Dockerfile  linux-compose.yml  mac-compose.yml  ua-linux-compose.yml
compose/docs/: Dockerfile
compose/jupyter/: Dockerfile
compose/jupyterhub/: Dockerfile  jupyter-hub.yml
compose/local/: Dockerfile
compose/rstudio/: Dockerfile
compose/server/: Dockerfile
data/Scotland/: Scotland.bbox.R  Scotland.bbox.dbf  Scotland.bbox.shp  Scotland.bbox.shx
data2/: Scotland.bbox.R
docs/: contributing.html  contributing.md  cpm-projection.qdm  cpm-projection.qmd  cpm_projection.html  cpm_projection.qmd  cpm_projection_diff_plots.ipynb  datasets.html  datasets.qmd  deprecated_pipeline.html  deprecated_pipeline.qmd  docker-configurations.html  docker-configurations.qmd  download.html  download.qmd  pipeline.html  pipeline.md  pipeline.qmd  pipeline_guidance.html  pipeline_guidance.md  pipeline_guidance.qmd  reproducibility.qmd
docs/assets/: pipeline.mermaid
docs/doc_make/: ceda_ftp_download.rst  conf.py  index.rst  resampling_hads.rst
docs/reference/: clim_recal.ceda_ftp_download.html  clim_recal.config.html  clim_recal.convert.html  (+11 more)
internal_docs/: INTERNAL.md
notebooks/: Resampling.HADs.R  cpm_projection_diff_plots.html  cpm_projection_diff_plots.ipynb  cpm_projection_diff_plots_linear_nearest.html  cpm_projection_diff_plots_linear_nearest.ipynb  load_data_python.ipynb
python/: .pytest.ini  README.html  README.md  conftest.py  pipeline.py  pyproject.toml  resampling.py  resampling_hads.py  utils.py
python/clim_recal/: ceda_ftp_download.py  cli.py  config.py  convert.py  crop.py  data_loader.py  pipeline.py  resample.py  utils.py
python/clim_recal/debiasing/: debias_wrapper.py  preprocess_data.py  three_cities_debiasing_cropped.sh
python/clim_recal/utils/: core.py  data.py  docs.py  gdal_formats.py  server.py  xarray.py
python/data_download/: ceda_ftp_download.py
python/debiasing/: CMethods.py  common_tools.py  debias.py  debias_wrapper.py  edit_cpm_filenames.py  preprocess_data.py  remove_dates_from_leap_years.py  run_cmethods.py  run_pycat.py  three_cities_debiasing.sh  three_cities_debiasing_cropped.sh  three_cities_debiasing_workshop.sh
python/load_data/: data_loader.py
python/reprojection/: README.md  netcf-to-geotiff.ipynb  reproject_all.py
python/resampling/: check_calendar.py  check_calendar_log.txt  resampling_hads.py  testing_resampling.ipynb
python/scripts/: check_imports.py  process_cpm_all.sh  process_cpm_single_file.py  process_cpm_single_wrapper.sh  process_hads_all.sh  process_hads_single_file.py  process_hads_single_wrapper.sh  scripts-readme.md  trail_different_gdalwarp_options.sh
python/tests/: copy_example_files_locally.sh  test_cli.py  test_convert.py  test_crop.py  test_date_resample.py  test_date_resampling.py  test_debiasing.py  test_pipeline.py  test_resample.py  test_utils_core.py  test_utils_xarray.py  utils.py
python/tests/data/: Glasgow.shp  test_user_accounts.xlsx
python/tests/data/Glasgow/: Glasgow.dbf  Glasgow.shx
python/tests/data/Glasgow/cropped-tif/: pr_rcp85_land-cpm_uk_2.2km_06_day_20791201-20801130.tif
test_local_data/: rcp85_land-cpm_uk_2.2km_grid.nc
(+33 files in other folders)
