[project]
name = "clim-recal"
version = "0.1.0"
description = "Resources to tackle systematic errors or biases in Regional Climate Models (RCMs)."
readme = "README.md"
authors = [
    {name="Dr Ruth Bowyer"},
    {name="Dr Griffith Rees"},
    {name="Dr Camila Rangel Smith"},
    {name="Dr Greg Mingas"},
    {name="Dr Sophie Arana"},
    {name="Dr Aoife Hughes"},
    {name="Bowan Zhang"},
    {name="Jennifer Ding"},
    {name="Dr Andy Smith"},
    {name="Dr Stuart Lynn"},
]
maintainers = [
  {name="Dr Griffith Rees", email="grees@turing.ac.uk"},
]
license = {text = "MIT"}
requires-python = ">=3.12.5"
dependencies = [
    "tqdm>=4.66.4",
    "scipy<1.14",
    "python-dateutil<3.0.0,>=2.8.2",
    "jupyterlab<5.0.0,>=4.1.2",
    "matplotlib<3.9",
    "geopandas>=0.14.3",
    "openpyxl>=3.1.2",
    "gdal==3.8.4",
    "conda-lock>=2.5.5",
    "rich>=13.7.1",
    "netcdf4>=1.6.5",
    "pdm>=2.12.4",
    "typer>=0.12.3",
    "seaborn>=0.13.2",
    "dill>=0.3.8",
    "numpy>2",
    "rioxarray>=0.17.0",
    "rasterio>=1.4.1",
    "nc-time-axis>=1.4.1",
    "jupyter-cache>=1.0.0",
]

[project.scripts]
clim-recal = "clim_recal.cli:clim_recal"

[tool.isort]
profile = "black"
known_first_party = ["clim_recal"]

[tool.pycln]
all = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest-cov<5.0.0,>=4.1.0",
    "pytest-sugar<2.0.0,>=1.0.0",
    "quartodoc>=0.7.5",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage-badge<2.0.0,>=1.1.0",
    "pytest-xdist>=3.5.0",
    "sysrsync>=1.1.1",
    "pydantic>=2.8.2",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.conda-lock]
platforms = [
    'osx-arm64', 'linux-64', 'linux-aarch64'
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -ra -q
    --doctest-modules
    --ignore=clim_recal/debiasing/python-cmethods
    --ignore=clim_recal/debiasing/preprocess_data.py
    --ignore=clim_recal/debiasing/run_cmethods.py
    -m "not server and not mount and not localcache"
    --pdbcls=IPython.terminal.debugger:TerminalPdb
    --cov=clim_recal
    --cov-report=term:skip-covered
    --strict-markers
    --durations=5
    --failed-first
"""
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS",]
testpaths = [
    "tests",
    "clim_recal",
]
markers = [
    "slow: slow tests (deselect with '-m \"not slow\".')",
    "server: designed to only run on a server.",
    "mount: requires specifc data mounted.",
    "docker: requires running via docker jupyterlab.",
    "multiprocess: uses multiprocessing.",
    "darwin: requires darwin (macOS) operating system.",
    "localcache: uses local copies of mount files.",
]
